[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dan-utils"
version = "0.1.0"
description = "My personal package of utilities for various applications, such as DL"
dependencies = [
    "numpy",
    "matplotlib",
    "torch"
]

[tool.setuptools.packages.find]
include = ["dan_utils*"]
